--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 }
 
 body {
+    margin: 10px;
+    padding: 10px;
     font-family: Arial, sans-serif;
     font-weight: 400;
     font-size: 1.2rem;
