--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,9 @@ img {
 a {
     color: mediumblue;
     text-decoration: none;
+    font-family: Merriweather, serif;
+    font-weight: 400;
+    font-size: 1.2rem;
 }
 
 a:hover {
