Add styles for list items and center text

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@ body {
     line-height: 1.4;
     color: black;
     background-color: white;
+    text-align:center;
+    max-width:750px;        
 }
 
 img {
@@ -29,4 +31,7 @@ a {
 
 a:hover {
     color: darkolivegreen;
+}
+li{
+    list-style-type:none;
 }
