--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
     background-color: white;
     text-align:center; 
     background-color:lightcyan;
+    background:url("./img/the-simpsons-logo-png_seeklogo-139134.png")
 }
 
 img {
@@ -38,3 +39,4 @@ a:visited{
 li{
     list-style-type:none;
 }
+background
