--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
     background-color: white;
     text-align:center; 
     background-image:url("./img/the-simpsons-logo-png_seeklogo-139134.png")
+    background-position: center;
+    background-size:cover;
 }
 
 img {
