--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     color: black;
     background-color: white;
     text-align:center; 
-    background-image:url("./img/the-simpsons-logo-png_seeklogo-139134.png")
+    background-image:url("../img/the-simpsons-logo-png_seeklogo-139134.png")
     background-position: center;
     background-size:cover;
 }
