--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,10 @@ body {
     color: black;
     background-color: white;
     text-align:center; 
-    background-image:url("../img/the-simpsons-logo-png_seeklogo-139134.png");
-    background-position: center;
-    background-size:cover;
+    background-image:url("../img/simpsons-background.png");
+    background-position: right center;
+    background-size:500px auto;
+    background-repeat:no-repeat;
 }
 
 img {
