--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,8 @@ body {
     background-position: right center;
     background-size:500px auto;
     background-repeat:no-repeat;
+    background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 img {
