--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
     text-align:center; 
     background-image:url("../img/ExtensionPhotoshop_Image.png");
     background-position: right center;
-    background-size:500px auto;
+    background-size:50% auto;
     background-repeat:no-repeat;
     background-attachment: fixed;
     overflow-x: hidden;
@@ -50,4 +50,9 @@ h1{
 }
 h2{
     font-family:roboto;
+    border:2px solid red;
+    width:fit-content;
+    margin-left:auto;
+    margin-right:auto;
+    padding:10px;
 }
