--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ h2{
     border:2px solid black;
     background-color:blue;
     color:white;
+    padding:20px;
 }
 p{
     text-align:center;
@@ -76,7 +77,6 @@ p{
     background-color: rgba(255, 255, 255, 0.1);
 }
 .menu a{
-    color:black;;
     padding:20px;
     display:block;
     text-align:center;
