--- a/css/main.css
+++ b/css/main.css
@@ -66,9 +66,9 @@ p{
     text-align:center;
 }
 .experience, .competences, .formation{
-    margin-left:500px;
-    margin-right:500px;
-    text-align:left;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
 }
 .menu ul{
     list-style-type: none;
