--- a/css/main.css
+++ b/css/main.css
@@ -85,5 +85,14 @@ p{
     backdrop-filter:blur(10px)
 }
 footer{
-    padding:25px;
+    padding:0px;
+    border: 2px solid black;
+    background-color:black;
+    color:white;
+}
+footer a{
+    color:red;
+}
+footer a:hover{
+    color:orange;
 }
