--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     margin: 10px;
     padding: 10px;
@@ -19,13 +18,11 @@ body {
     background-attachment: fixed;
     overflow-x: hidden;
 }
-
 img {
     max-width: 100%;
     height: 220px;
     width: auto;
 }
-
 a {
     color: mediumblue;
     text-decoration: none;
@@ -33,7 +30,6 @@ a {
     font-weight: 400;
     font-size: 1.2rem;
 }
-
 a:hover {
     color: darkolivegreen;
 }
@@ -82,7 +78,8 @@ p{
     text-align:center;
 }
 .menu a:hover{
-    backdrop-filter:blur(10px)
+    backdrop-filter:blur(10px);
+    font-size: 30px;
 }
 footer{
     padding:0px;
@@ -95,4 +92,5 @@ footer a{
 }
 footer a:hover{
     color:orange;
+    font-size:20px;
 }
