--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ img {
     max-width: 100%;
     height: 220px;
     width: auto;
+    
 }
 a {
     color: mediumblue;
@@ -60,6 +61,8 @@ h2{
 }
 p{
     text-align:center;
+    dont-size: italic;
+    color: darkgreen;
 }
 .experience, .competences, .formation{
     margin-left:auto;
