--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,8 @@ body {
     overflow-x: hidden;
 }
 img {
-    max-width: 100%;
-    height: 220px;
+    max-width: 40%;
+    max-height: 40%;
     width: auto;
     
 }
