--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ img {
     max-width: 40%;
     max-height: 40%;
     width: auto;
-    
 }
 a:link {
     color: mediumblue;
@@ -36,6 +35,7 @@ a:visited{
 }
 a:hover {
     color: darkolivegreen;
+    font size
 }
 a:
 li{
