--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,7 @@ a:visited{
 }
 a:hover {
     color: darkolivegreen;
-    font size
 }
-a:
 li{
     list-style-type:none;
 }
@@ -62,7 +60,7 @@ h2{
 }
 p{
     text-align:center;
-    dont-size: italic;
+    font-style: italic;
     color: darkgreen;
 }
 .experience, .competences, .formation{
